--- a/src/configs/styles_config.sass
+++ b/src/configs/styles_config.sass
@@ -4,7 +4,7 @@
 $primary-color: #ffc107
 
 // Цвета текста
-$light: #f9f9f9
-$medium: #f0f0f0
-$hard: #959595
+$light: darken(#f9f9f9, 3%)
+$medium: darken(#f0f0f0, 3%)
+$hard: darken(#959595, 3%)
 $dark: #333
