--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,21 +1,21 @@
 
 /** Light */
-@font-face {
+/*@font-face {
   font-family: "Light";
   font-weight: 300;
   src: url("../fonts/SF-UI-Text-Light.ttf");
-}
+}*/
 
 /** Regular */
 @font-face {
-  font-family: "Regular";
+  font-family: "Light";
   font-weight: 400;
   src: url("../fonts/SF-UI-Text-Regular.ttf");
 }
 
 /** Medium */
 @font-face {
-  font-family: "Medium";
+  font-family: "Regular";
   font-weight: 500;
   src: url("../fonts/SF-UI-Text-Medium.ttf");
 }
