Тест цвета на слабых мониторах

--- a/src/configs/styles_config.sass
+++ b/src/configs/styles_config.sass
@@ -4,7 +4,7 @@
 $primary-color: #ffc107
 
 // Цвета текста
-$light: darken(#f9f9f9, 3%)
+$light: #edeef0
 $medium: darken(#f0f0f0, 5%)
 $hard: darken(#959595, 3%)
 $dark: #333
