--- a/src/configs/styles_config.sass
+++ b/src/configs/styles_config.sass
@@ -8,3 +8,6 @@ $light: #edeef0
 $medium: darken(#f0f0f0, 5%)
 $hard: darken(#959595, 3%)
 $dark: #333
+
+$trans-black: rgba(0, 0, 0, .16)
+$trans-white: rgba(255, 255, 255, .2)
