--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,11 +1,3 @@
-
-/** Light */
-/*@font-face {
-  font-family: "Light";
-  font-weight: 300;
-  src: url("../fonts/SF-UI-Text-Light.ttf");
-}*/
-
 /** Regular */
 @font-face {
   font-family: "Light";
@@ -22,7 +14,7 @@
 
 /** Semi Bold */
 @font-face {
-  font-family: "Semi Bold";
+  font-family: "Medium";
   font-weight: 600;
   src: url("../fonts/SF-UI-Text-Semibold.ttf");
 }
