Пуш для теста производительности на винде

--- a/src/configs/styles_config.sass
+++ b/src/configs/styles_config.sass
@@ -4,7 +4,7 @@
 $primary-color: #ffc107
 
 // Цвета текста
-$light: #edeef0
+$light: lighten(#edeef0, 2%)
 $medium: darken(#f0f0f0, 5%)
 $hard: darken(#959595, 3%)
 $dark: #333
