--- a/src/assets/css/print.sass
+++ b/src/assets/css/print.sass
@@ -1,52 +1,51 @@
 @media print
 
-    @page
-        margin: 0
+  @page
+    margin: 0
 
-    body *
-        visibility: hidden
+  body *
+    visibility: hidden
 
-    .invoice, .invoice *
-        visibility: visible
+  .invoice, .invoice *
+    visibility: visible
 
-    .invoice
-        position: fixed
-        top: .5cm
-        left: 1cm
-        width: 18cm
-        height: 14cm
+  .invoice
+    position: fixed
+    top: .5cm
+    left: 1cm
+    width: 18cm
+    height: 14cm
 
-        & .invoice_head
-            display: flex
-            justify-content: space-between
-            align-items: center
-            margin-bottom: .5cm
+    & .invoice_head
+      display: flex
+      justify-content: space-between
+      align-items: center
+      margin-bottom: .5cm
 
-            & img
-                height: 2cm
+      & img
+        height: 2cm
 
-            & h2
-                text-align: right
-                line-height: 150%
+      & h2
+        text-align: right
+        line-height: 150%
 
-                & strong
-                    font-weight: normal
-                    font-family: 'Medium'
+        & strong
+          font-weight: 700
 
-    .invoice > table
-        width: 100%
-        border: 1px solid darken(#f0f0f0, 5%)
+  .invoice > table
+    width: 100%
+    border: 1px solid darken(#f0f0f0, 5%)
 
-        & > tr > td
-            border: 1px solid darken(#f0f0f0, 5%)
-            padding: 10px
+    & > tr > td
+      border: 1px solid darken(#f0f0f0, 5%)
+      padding: 10px
 
-            &  table tr
-                border-top: 1px solid #edeef0
+      &  table tr
+        border-top: 1px solid #edeef0
 
-            & > table > tr > td
-                padding: 5px 0
+      & > table > tr > td
+        padding: 5px 0
 
-            & span
-                display: inline-block
-                width: 70px
+      & span
+        display: inline-block
+        width: 70px
